--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="fonts.css" />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <!-- Include latest PatternFly CSS via CDN -->
     <link
             rel="stylesheet"
@@ -14,7 +14,7 @@
     <title>PatternFly Primary-detail expanded CodeSandbox Example</title>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
     <script src="index.js"></script>
 </head>
