customer ui for onboarding

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -18,6 +18,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Legal Review</title>
@@ -342,6 +343,7 @@
                   <tr>
                     <th scope="col">Request ID</th>
                     <th scope="col">Documents</th>
+                    <th scope="col">Actions</th>
 
 
 
