--- a/src/main/resources/META-INF/resources/UploadDocumentation.html
+++ b/src/main/resources/META-INF/resources/UploadDocumentation.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>PatternFly Primary-detail expanded CodeSandbox Example</title>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
